--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nalugala_vc.github.io/My-Portfolio",
   "name": "3dfolio",
   "private": true,
   "version": "0.0.0",
@@ -6,6 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,8 +17,8 @@
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
     "maath": "^0.5.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.172",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^0.1.4",
